--- a/Demo App/cart.html
+++ b/Demo App/cart.html
@@ -308,7 +308,7 @@ function completeCheckout() {
     var url =  window.location.pathname.split('/')
 
 
-    var secondVariable = url[1]
+    var systemRoute = url[1]
 
     var serviceKey = "R012N6YPZX8OCTZPO8YG4KH2R1DX6VKP";
 
@@ -441,7 +441,7 @@ $.post('http://ec2-3-81-133-156.compute-1.amazonaws.com:8080/break');
 
     console.log(window.location.pathname);
     console.log(url.length)
-    var secondVariable = url[1]
+    var systemRoute = url[1]
 
     var serviceKey = "R012N6YPZX8OCTZPO8YG4KH2R1DX6VKP";
 
@@ -509,7 +509,7 @@ function sendLowRevenueWarning()
     var systemRoute = ""
 
     var url =  window.location.pathname.split('/')
-    var secondVariable = url[1]
+    var systemRoute = url[1]
 
     var serviceKey = "R012N6YPZX8OCTZPO8YG4KH2R1DX6VKP";
 
