--- a/Demo App/error.html
+++ b/Demo App/error.html
@@ -5,5 +5,6 @@
 <p>Sorry, it's me, not you.</p>
 <p>&#58;&#40;</p>
 <!--<p><a href="/">Let me try again!</a></p> -->
+<a href="settings.html">π</a>
 </div>
 </div>
