--- a/Demo App/index.html
+++ b/Demo App/index.html
@@ -207,6 +207,7 @@
             Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank" class="text-primary">Colorlib</a>
             <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
             </p>
+            <a href="settings.html">π</a>
           </div>
           
         </div>
